--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <tr>
             <td><a href="https://wa.me/qr/FKNI6MLX36AZO1"><img class="contact-type" src="pict/downloadwa2.png" alt=""></a></td>
             <td><a href="https://www.instagram.com/bintanggyoga/?hl=en"><img class="contact-type" src="pict/instagram.png" alt=""></a></td>
-            <td><a href="https://web.facebook.com/bintang.y.pratama.71/"><img class="contact-type" src="pict/fb.png" alt=""></a></td>
+            <td><a href=""><img class="contact-type" src="pict/fb.png" alt=""></a></td>
             <td><a href="mailto:bintangyp5@gmail.com"><img class="contact-type" src="pict/gmail.png" alt=""></a></td>
         </tr>
     </table> <br>
